# invoice-ocr-arabic

./: api.py  setup.py
invoice_kraken_ocr/: pyproject.toml
invoice_kraken_ocr/doctype/ocr_invoice_import/: ocr_invoice_import.json
invoice_kraken_ocr/invoice_kraken_ocr/: README.md  hooks.py  kraken_io.py  parser.py  train.py
invoice_kraken_ocr/invoice_kraken_ocr/invoice_kraken_ocr/doctype/ocr_invoice_import/: ocr_invoice_import.js
